@@ -54,7 +54,6 @@ my $session = new EPrints::Session( 1 , $archiveid, $noise );
 exit( 1 ) unless( defined $session );
 
 my $db = $session->get_database;
-#$db->set_timer( 1 );
 
 $userid = 1 unless defined $userid;
 $datasetid = "archive" unless defined $datasetid;
